# Clairvoyance

./: .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
dbt/clairvoyance/: dbt_project.yml  profiles.yml
dbt/clairvoyance/models/ads/: ads_monthly_spend_dashboard_df.sql  ads_net_worth_daily_df.sql  ads_net_worth_dashboard_df.sql
dbt/clairvoyance/models/dwd/: dwd_bank_transactions_df.sql  dwd_investment_positions_df.sql
dbt/clairvoyance/models/dws/: dws_monthly_savings_rate_df.sql  dws_monthly_spend_df.sql  dws_net_worth_history_df.sql
docs/: dashboard_mockup.html  schema.md
ingestion/bank/: categoriser.py  pdf_parser.py  pipeline.py  service.py
ingestion/cpf/: pdf_parser.py  pipeline.py  service.py
ingestion/investment/: fx.py  gemini.py  ibkr.py  models.py  pipeline.py  tiger.py
ingestion/reporter/: pipeline.py
ingestion/ssb/: pipeline.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/bank/: test_categoriser.py
tests/investment/: test_gemini.py  test_ibkr.py
